# gr7j

./: parameters.json
gr7jmodule/: Cargo.toml  pyproject.toml
gr7jmodule/.env/share/jupyter/labextensions/jupyterlab-plotly/: package.json
gr7jmodule/.env/share/jupyter/labextensions/jupyterlab-plotly/static/: 478.b48f45da3d88616ad3f9.js  third-party-licenses.json
gr7jmodule/.env/share/jupyter/nbextensions/jupyterlab-plotly/: index.js
gr7jmodule/python/gr7jmodule/: __init__.py  gr1a.py  gr2m.py  gr4a.py  gr4h.py  gr4j.py  gr5j.py  gr6j.py  gr7j.py  model_interface.py
gr7jmodule/python_package/: __init__.py  gr1a.py  gr2m.py  gr4a.py
gr7jmodule/src/: gr1a.rs  gr2m.rs  gr4a.rs  gr4h.rs  gr4j.rs  gr5j.rs  gr6j.rs  gr7j.rs  lib.rs  s_curves.rs
test/: calibrating.py  calibrating_gr4a.py  gr4a.py  gr6j.py  gr7j.py  input_data.py  model_interface.py  mytest.py  parameters.json  run_mytest.sh
